--- a/Day 1. Expanding Cards/style.css
+++ b/Day 1. Expanding Cards/style.css
@@ -15,7 +15,7 @@ body {
 
 .container {
   display: flex;
-  width: 90vw;
+  width: 120vw;
 }
 
 .panel {
@@ -47,6 +47,7 @@ body {
 
 .panel.active h3 {
   opacity: 1;
+  transition: opacity 0.3s ease-in 0.4s;
 }
 
 @media (max-width: 480px) {
