--- a/Day 3. Rotating Navigation/style.css
+++ b/Day 3. Rotating Navigation/style.css
@@ -36,7 +36,7 @@ body {
   width: 200px;
   border-radius: 50%;
   position: relative;
-  transition: trasform 0.5s linear;
+  transition: transform 0.5s linear;
 }
 
 .container.show-nav .circle {
@@ -118,7 +118,7 @@ nav ul li + li + li {
   margin: 50px auto;
 }
 
-content h1 {
+.content h1 {
   margin: 0;
 }
 
